force-app/main/default/objects/PAF_Misc__c/PAF_Misc__c.object-meta.xml
<CustomObject>
    <label>PAF Misc</label>
    <nameField>
        <label>PAF Misc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAF Misc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>