force-app/main/default/objects/PAF_Misc__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>