force-app/main/default/objects/PAF_Misc__c/fields/Misc_Cost__c.field-meta.xml
<CustomField>
    <fullName>Misc_Cost__c</fullName>
    <label>Misc Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>