force-app/main/default/objects/PAF_Misc__c/fields/Misc_form_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Misc_form_of_payment__c</fullName>
    <label>Misc form of payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>