force-app/main/default/objects/PAF_Misc__c/fields/Misc_Nett__c.field-meta.xml
<CustomField>
    <fullName>Misc_Nett__c</fullName>
    <label>Misc Nett</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>